Added authorization and automigration
