# orchestrator/pkg/models/user.go
@@ -1,0 +1,8 @@
+package models
+
+type User struct {
+	Id int `json:"-" db:"id"`
+	Name string `json:"name" binding:"required"`
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
