# orchestrator/pkg/transport/handler/expressionHandler.go
@@ -12,6 +12,7 @@ import (
 
 // GetExpressions godoc
 // @Summary      Get expressions
+// @Security ApiKeyAuth
 // @Description  Get expressions
 // @Tags         expressions
 // @Accept       json
@@ -24,6 +25,11 @@ import (
 // @Failure      500  {object}  map[string]string
 // @Router       /expressions/ [get]
 func (h *Handler) GetExpressions(c *gin.Context) {
+	userId, err := getUserId(c)
+	if err != nil {
+		return
+	}
+
 	recordPerPage, err := strconv.Atoi(c.Query("recordPerPage"))
 	if err != nil || recordPerPage < 1 {
 		recordPerPage = 10
@@ -37,7 +43,7 @@ func (h *Handler) GetExpressions(c *gin.Context) {
 	startIndex := (page - 1) * recordPerPage
 	startIndex, err = strconv.Atoi(c.Query("startIndex"))
 
-	expressions, err := h.services.Expression.GetExpressions(startIndex, recordPerPage)
+	expressions, err := h.services.Expression.GetExpressions(startIndex, recordPerPage, userId)
 	if err != nil {
 		logrus.Error(err.Error())
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -48,6 +54,7 @@ func (h *Handler) GetExpressions(c *gin.Context) {
 
 // GetExpression godoc
 // @Summary      Get expression
+// @Security ApiKeyAuth
 // @Description  Get expression by id
 // @Tags         expressions
 // @Accept       json
@@ -60,6 +67,11 @@ func (h *Handler) GetExpressions(c *gin.Context) {
 // @Router       /expressions/{id} [get]
 func (h *Handler) GetExpression() gin.HandlerFunc {
 	return func(c *gin.Context) {
+		userId, err := getUserId(c)
+		if err != nil {
+			return
+		}
+
 		id := c.Param("id")
 		uuid, err := uuid.Parse(id)
 		if err != nil {
@@ -67,7 +79,7 @@ func (h *Handler) GetExpression() gin.HandlerFunc {
 			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
-		expression, err := h.services.Expression.GetExpression(uuid)
+		expression, err := h.services.Expression.GetExpression(uuid, userId)
 		if err != nil {
 			logrus.Error(err.Error())
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "error occured while fetching the expression item"})
@@ -79,11 +91,12 @@ func (h *Handler) GetExpression() gin.HandlerFunc {
 
 // AddExpression godoc
 // @Summary      Add expression
+// @Security ApiKeyAuth
 // @Description  Add new expression
 // @Tags         expressions
 // @Accept       json
 // @Produce      json
-// @Param        expression   body      models.Expression  true  "Expression info"
+// @Param        expression   body      models.ExpressionFromUser  true  "Expression info"
 // @Success      200  {object}  uuid.UUID
 // @Failure      400  {object}  map[string]string
 // @Failure      404  {object} map[string]string
@@ -91,13 +104,18 @@ func (h *Handler) GetExpression() gin.HandlerFunc {
 // @Router       /expressions/ [post]
 func (h *Handler) CreateExpression() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var expression models.Expression
+		userId, err := getUserId(c)
+		if err != nil {
+			return
+		}
+
+		var expression models.ExpressionFromUser
 		if err := c.BindJSON(&expression); err != nil {
 			logrus.Error(err.Error())
 			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
-		id, err := h.services.Expression.CreateExpression(expression)
+		id, err := h.services.Expression.CreateExpression(expression, userId)
 		if err != nil {
 			logrus.Error(err.Error())
 			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
